# asgi-admin

./: .editorconfig  .gitignore  .prettierrc  README.md  asgi-admin.code-workspace  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
asgi_admin/: __init__.py  _asyncio.py  _breadcrumbs.py  _constants.py  _normalization.py  _routing.py  admin.py  app.py  exceptions.py  repository.py  views.py  viewsets.py
asgi_admin/integrations/: sqlalchemy.py
asgi_admin/templating/: __init__.py
asgi_admin/templating/templates/: base.html.jinja  layout.html.jinja
asgi_admin/templating/templates/macros/: clipboard.html.jinja  forms.html.jinja  icons.html.jinja
asgi_admin/templating/templates/views/admin/: index.html.jinja
asgi_admin/templating/templates/views/model/: edit.html.jinja  layout.html.jinja  list.html.jinja
docs/reference/: asgi_admin.md
tests/: app.py  conftest.py  test_add.py  test_admin.py  test_views.py
tests/app/: __init__.py
tests/app/templates/: item_custom.html.jinja
tests/integrations/: test_sqlalchemy.py
