[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP", "T20"]

[tool.pytest.ini_options]
addopts = "--cov=asgi_admin/ --cov-report=term-missing"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "asgi_admin/__init__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.9"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
    "sqlalchemy[asyncio]",
    "uvicorn",
    "httpx",
    "beautifulsoup4",
    "types-beautifulsoup4",
    "asgi-lifespan",
    "aiosqlite",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-app = "uvicorn tests.app:app --reload"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff check --fix .",
  "mypy asgi_admin/",
]
lint-check = [
  "ruff format --check .",
  "ruff check .",
  "mypy asgi_admin/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "asgi-admin"
authors = [
  { name = "asgi-admin", email = "fvoron@gmail.com" }
]
description = "A flexible admin builder for FastAPI, Starlette and ASGI apps"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "starlette",
    "jinja2",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy[asyncio] >=2",
]

[project.urls]
Documentation = "https://polarsource.github.io/asgi-admin/"
Source = "https://github.com/polarsource/asgi-admin"
